--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@
 
 # Oracle
 spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:ORCL
-spring.datasource.username=rm93449
-spring.datasource.password=120803
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 # ORACLE JPA
